...
import 'package:ota/modules/hotel/hotel_detail/view_model/argument_model.dart';
import 'package:ota/modules/hotel/hotel_detail/view_model/secondary_view_model.dart';
import 'package:ota/modules/hotel/room_detail/view_model/room_argument_model.dart';
import 'package:ota/modules/hotel/room_reservation/reservation/view_model/reservation_argument_model.dart';
import 'package:provider/provider.dart';

const String _roomDetailKey = "room_detail_key";
const _kMaxLines = 2;

class SecondaryHotelView extends StatefulWidget {
  final SecondaryViewModel secondaryViewModel;

  const SecondaryHotelView({
...
