...
  AppLocalizationsStrings.reservePersonLastNameRequired:
      'นามสกุล (จำเป็นต้องระบุ)',

  AppLocalizationsStrings.numberOfNights: "จำนวนคืน",
  AppLocalizationsStrings.numberOfGuests: "จำนวนผู้เข้าพัก",
  AppLocalizationsStrings.numberOfRooms: "จำนวนห้อง",
  AppLocalizationsStrings.roomLabel: 'ห้อง',

  AppLocalizationsStrings.noOfServices: 'จำนวน',
  AppLocalizationsStrings.dateOfService: 'วันที่รับบริการ',
  AppLocalizationsStrings.additionalServices: 'บริการเพิ่มเติม',
  AppLocalizationsStrings.addItems: 'เพิ่มรายการ',
  AppLocalizationsStrings.edit: 'แก้ไข',
...
